--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Login for Data</title>
+<html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Login for Data</title>
 <style>
-table, th, td {border: 1px solid black;border-collapse: collapse;padding: 8px;text-align: left;}
-th, td {width: 120px;}
-#printButton, #searchBar, #loadingMessage {margin-top: 20px;display: none;}
-#loadingMessage {font-size: 16px;color: gray;}
+table,th,td{border:1px solid black;border-collapse:collapse;padding:8px;text-align:left;}th,td{width:120px;}
+button{font-size:14px;padding:8px;border:none;border-radius:5px;color:white;background:brown;}button:hover{color:white;background:red;}
+#printButton,#searchBar,#loadingMessage{margin-top:20px;display:none;}#loadingMessage{font-size:16px;color:gray;}
 </style>
 </head>
 <body>
